# rusty-url

./: .gitignore  README.md  terraform.tfstate
.github/workflows/: deploy.yml
rustyurl-backend/: Cargo.toml  Dockerfile
rustyurl-backend/.github/workflows/: deploy.yml
rustyurl-backend/src/: main.rs
rustyurl-iac/: main.tf  outputs.tf  variables.tf
