[package]
name = "rustyurl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "0.0.26-alpha"
aws-config = "0.0.26-alpha"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
